--- a/data/blog/dropshipping.mdx
+++ b/data/blog/dropshipping.mdx
@@ -3,12 +3,63 @@ title: "Что за чёрт этот ваш дропшиппинг"
 publishedAt: "2023-01-27"
 summary: "Как, куда и сколько? Постараюсь ответить на вопросы: что такое дропшип, как начать и во сколько обойдётся. А также поговорим о похожих схемах заработка в интернете"
 image: "/images/dropshipping/cover.jpg"
-isPopular: true
 ---
 
 ![A lot of boxes for dropshipping](/images/dropshipping/cover.jpg)
+![A lot of boxes for dropshipping](/images/dropshipping/vert.png)
 
 # Дропшиппинг
 Привет, дорогой читатель
 Я увлекаюсь не только спортом, ай-ти и криптовалютой. Я постоянно расширяю свой кругозор. И взор мой пал на дропшиппинг. Наверно часто встречали пафосные видосики в тик таке либо инсте, где 16-ти летняя малолеточка гоняет на ламбе, аргументируя, как легко она заработала бабки на этой темке.
 Сегодня хочу рассказать, что за темка такая этот ваш дропшиппинг, как он работает в Рашке и стоит ли тратить время на это.
+
+# Heading 1
+## Heading 2
+### Heading 3
+
+***
+
+Thematic break
+
+***
+
+> Blockquote
+
+- list item 1
+- list item 2
+
+1. list item
+2. list item
+
+## Code Example
+
+```typescript:lib/mdx.ts
+// code here
+```
+
+## CODE Block
+
+```JS
+  const handle = (req, res) => {
+    /* Some API Logic here*/
+    getActiveUsers(req)
+  }
+
+  const getActiveUsers = (req) => {
+    /* Get some users from DB */
+    const data = FakeDB.get("Users", u => u.id === req.userId)
+    getAssociatedStuff(req)
+  }
+```
+
+_emphasis_
+
+**strong**
+
+~~ strikeThrough ~~
+
+here is break
+---
+after break
+
+[Link](https://v0.mdxjs.com/getting-started/#table-of-components)
