Made MDX work well. Made my blog responsive

--- a/data/blog/dropshipping.mdx
+++ b/data/blog/dropshipping.mdx
@@ -3,10 +3,19 @@ title: "Что за чёрт этот ваш дропшиппинг"
 publishedAt: "2023-01-27"
 summary: "Как, куда и сколько? Постараюсь ответить на вопросы: что такое дропшип, как начать и во сколько обойдётся. А также поговорим о похожих схемах заработка в интернете"
 image: "/images/dropshipping/cover.jpg"
+isPopular: true
 ---
 
-![A lot of boxes for dropshipping](/images/dropshipping/cover.jpg)
-![A lot of boxes for dropshipping](/images/dropshipping/vert.png)
+{/* ![A lot of boxes for dropshipping](/images/dropshipping/cover.jpg) */}
+{/* ![A lot of boxes for dropshipping](/images/dropshipping/vert.png) */}
+
+<BlogVerticalImage url="/images/dropshipping/vertical_binance.jpg" alt="123" />
+
+# image
+
+<BlogHorizontalImage url="/images/dropshipping/cover.jpg" alt="123" />
+
+# After image
 
 # Дропшиппинг
 Привет, дорогой читатель
