--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -1,37 +1,38 @@
 ---
 title: "Как я AI с помощью AI учил"
-publishedAt: "2023-02-22"
+publishedAt: "2023-02-02"
 summary: "Вы полюбому слышали про нейронки, которые там любые картинки рисуют и на любую тему подискутировать способны. Речь о Midjourney и ChatGPT. Собственно я решился научиться разрабатывать искусственный интеллект с помощью того самого любителя поговорить, с ChatGPT"
 image: "/images/dropshipping/cover.jpg"
 ---
 
 ## Оглавление
 
-1.  [Intro to Async Local Storage](#intro-to-async-local-storage)
-2.  [Logging with Async Local Storage in NextJS SSR](#logging-ssr)
+1.  [Знакомство](#знакомство)
 
 ### Знакомство
 
 Недолго думая, я подрубил VPNчик и зашёл на [сайтик OpenAI](https://openai.com/blog/chatgpt/), почитал чо как, ну и зашёл непосредственно в интерфейс для работы с самой нейронкой.
-В любой IT сфере есть roadmap, пройдя который ты пройдёшь путь от нуля до профессионала. Собственно именно это я и запросил и GPT:
+В любой IT сфере есть roadmap, пройдя который ты пройдёшь путь от нуля до профессионала. Собственно именно это я и запросил у GPT:
 
 > Show the roadmap to learn machine learning
 
-"Я не знаю английского, можно не на буржуйском с GPT общаться?" - Да, с нейронкой можно на русском конечно, но такое себе
+_"Я не знаю английского, можно не на буржуйском с GPT общаться?" - Да, с нейронкой можно на русском, но такое себе_
 
-Нейронка посмеялась с тавтологии, но всё же мне ответила и список был примерно таким
+Нейронка посмеялась с моей тавтологии, но всё же ответила мне. Список оказался примерно таким:
 
-1. Наберись базовых навыков в программировании и выучи хотя бы 1 язык (Желательно Python)
+1. Получи базовые навыки в программировании и выучи хотя бы 1 язык (желательно Python)
 2. Научись базовой статистике и теории вероятности, так как они важны для понятия многих алгоритмов
 3. Разберись в разных типах машинного обучения: обучение с учителем (supervised), без учителя (unsupervised), с подкреплением (reinforcement)
 4. Разберись в базовых алгоритмах, таких как: линейная регрессия, алгоритм k-ближайших соседей, дерево решений и нейронные сети
-5. Практикуйся, применяя полученные знания к реальным жизненным проблемам, используя такие библиотеки вроде scikit-learn и TensorFlow
+5. Практикуйся, применяя полученные знания к реальным жизненным проблемам, используя библиотеки вроде scikit-learn и TensorFlow
 6. Работай, набивай портфолио, блаблабла...
 
 Ну первый пункт у меня благо выполнен, не зря 4 года ради одной бумажки провтухал.
-Второй пунктик уже вызвал у меня немного отвращения, ибо ТВиМС (теория вероятности и мат. статистика) крайне неприятный предмет для изучения. Однако я добросовестно с помощью силы воли прошёлся по базовому обучающему курсу, можете не переживать.
-Опять же опущу моменты, связанные с математикой. Для изучения машинного обучения, как оказалось, надо бы хорошенько знать математику. Тут меня флешбекнуло в детство, ибо я даже линейное уравнение с двумя неизвестными решить не мог. Что тут о дифференцировании говорить.
 
-Перейдём к интересному - что за типы машинного обучения нас ожидают
+Второй пунктик уже вызвал у меня немного отвращения, ибо ТВиМС (теория вероятности и мат. статистика) крайне неприятный предмет для изучения. Однако я добросовестно взял волю в кулак и прошёлся по базовому обучающему курсу, можете не переживать.
+
+Опять же опущу моменты, связанные с математикой. Для изучения машинного обучения, как оказалось, надо бы хорошенько её знать. Тут меня флешбекнуло во времена школы и студенчества, ибо я даже линейное уравнение с двумя неизвестными решить не смог. Что тут о дифференцировании говорить.
+
+Перейдём к интересному - что за типы машинного обучения нас ожидают. Делаю запрос:
 
 > Give me extended explanation of supervised, unsupervised and reinforcement learning types
