--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -36,3 +36,9 @@ _"Я не знаю английского, можно не на буржуйск
 Перейдём к интересному - что за типы машинного обучения нас ожидают. Делаю запрос:
 
 > Give me extended explanation of supervised, unsupervised and reinforcement learning types
+
+***
+
+## Полезное чтиво для твоего мозга
+
+[Лонгрид про машинное обучение (большинство картинок оттуда)](https://vas3k.ru/blog/machine_learning/)
