Moved from lexical editor to simple MDX files

--- a/data/blog/dropshipping.mdx
+++ b/data/blog/dropshipping.mdx
@@ -4,6 +4,7 @@ publishedAt: "2023-01-27"
 summary: "Как, куда и сколько? Постараюсь ответить на вопросы: что такое дропшип, как начать и во сколько обойдётся. А также поговорим о похожих схемах заработка в интернете"
 image: "/images/dropshipping/cover.jpg"
 isPopular: true
+isPublished: false
 ---
 
 {/* ![A lot of boxes for dropshipping](/images/dropshipping/cover.jpg) */}
