--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -3,6 +3,7 @@ title: "Как я AI с помощью AI учил"
 publishedAt: "2023-02-02"
 summary: "Вы полюбому слышали про нейронки, которые там любые картинки рисуют и на любую тему подискутировать способны. Речь о Midjourney и ChatGPT. Собственно я решился научиться разрабатывать искусственный интеллект с помощью того самого любителя поговорить, с ChatGPT"
 image: "/images/dropshipping/cover.jpg"
+isPublished: true
 ---
 
 ## Оглавление
