Start writing blog post

--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -2,9 +2,11 @@
 title: "Как я AI с помощью AI учил"
 publishedAt: "2023-02-02"
 summary: "Вы полюбому слышали про нейронки, которые там любые картинки рисуют и на любую тему подискутировать способны. Речь о Midjourney и ChatGPT. Собственно я решился научиться разрабатывать искусственный интеллект с помощью того самого любителя поговорить, с ChatGPT"
-image: "/images/dropshipping/cover.jpg"
+image: "/images/how-i-ai-studied/cover.png"
 isPublished: true
 ---
+
+<BlogHorizontalImage url="/images/how-i-ai-studied/cover.png" alt="AI robot shows examples on the blackboard how to learn AI" />
 
 ## Оглавление
 
@@ -37,6 +39,24 @@ _"Я не знаю английского, можно не на буржуйск
 Перейдём к интересному - что за типы машинного обучения нас ожидают. Делаю запрос:
 
 > Give me extended explanation of supervised, unsupervised and reinforcement learning types
+
+Supervised Learning:
+
+Supervised learning is a type of machine learning algorithm that trains models using labeled data, where the outcome or target variable is known. The model is trained to predict the target variable based on the input features. The model is evaluated based on the accuracy of its predictions, and any errors are used to adjust the model's parameters.
+
+Examples of supervised learning include regression (predicting continuous values), classification (predicting categorical values), and time-series forecasting (predicting future values based on past data).
+
+Unsupervised Learning:
+
+Unsupervised learning is a type of machine learning algorithm that trains models using unlabeled data. The objective of unsupervised learning is to find patterns or structures in the data, rather than making predictions. The model is not told what the output should be and is left to find the patterns and relationships on its own.
+
+Examples of unsupervised learning include clustering (grouping data into similar classes), dimensionality reduction (reducing the number of features in the data), and anomaly detection (identifying outliers in the data).
+
+Reinforcement Learning:
+
+Reinforcement learning is a type of machine learning algorithm that trains models using a reward system. The model receives rewards or penalties based on its actions, and the objective is to maximize the total reward over time. Reinforcement learning is often used in decision-making and control systems, where the model needs to learn how to interact with an environment and make decisions that lead to optimal outcomes.
+
+Examples of reinforcement learning include playing video games (where the model receives rewards for winning and penalties for losing), controlling robots (where the model learns how to perform tasks), and trading stocks (where the model learns how to make investment decisions based on market trends).
 
 ***
 
