Fixed error. Continued blog post writing

--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -36,27 +36,38 @@ _"Я не знаю английского, можно не на буржуйск
 
 Опять же опущу моменты, связанные с математикой. Для изучения машинного обучения, как оказалось, надо бы хорошенько её знать. Тут меня флешбекнуло во времена школы и студенчества, ибо я даже линейное уравнение с двумя неизвестными решить не смог. Что тут о дифференцировании говорить.
 
-Перейдём к интересному - что за типы машинного обучения нас ожидают. Делаю запрос:
+Перейдём к интересному, к 3 пункту - что за типы машинного обучения нас ожидают. Делаю запрос:
 
 > Give me extended explanation of supervised, unsupervised and reinforcement learning types
 
-Supervised Learning:
+Буду в основном опираться на английскую терминологию, ибо на русском уши вянут от названий этих. Еще добавлю, что нейросеть отвечает мне полностью на английском. Перевожу в прямом эфире. Не удивляйтесь, если смысл покажется вам искажённым.
 
-Supervised learning is a type of machine learning algorithm that trains models using labeled data, where the outcome or target variable is known. The model is trained to predict the target variable based on the input features. The model is evaluated based on the accuracy of its predictions, and any errors are used to adjust the model's parameters.
+## Supervised (с учителем):
 
-Examples of supervised learning include regression (predicting continuous values), classification (predicting categorical values), and time-series forecasting (predicting future values based on past data).
+Supervised обучение - это такой алгоритм машинного обучения, который тренирует модель используя маркированные данные, где известен конечный и желаемый результат. Модель обучается предсказывать конечный результат, опираясь на входные данные. Модель оценивается на основе точности её предсказаний, и любые ошибки используются для регулирования параметров модели.
 
-Unsupervised Learning:
+Примеры подобного типа обучения:
+- регрессия (предсказание числового значения)
+- классификация (предсказание категории)
+- прогнозирование временных рядов (предсказание будущих значений, основываясь на результатах в прошлом).
 
-Unsupervised learning is a type of machine learning algorithm that trains models using unlabeled data. The objective of unsupervised learning is to find patterns or structures in the data, rather than making predictions. The model is not told what the output should be and is left to find the patterns and relationships on its own.
+## Unsupervised (без учителя):
 
-Examples of unsupervised learning include clustering (grouping data into similar classes), dimensionality reduction (reducing the number of features in the data), and anomaly detection (identifying outliers in the data).
+Unsupervised обучение - это такой алгоритм машинного обучения, который тренирует модель используя немаркированные данные. Цель такого обучения - найти паттерны или структуры в данных, нежели предсказать конкретное значение. Модель не обуславливают тем, какой результат она должна выдать. Её необходимо найти паттерны и взаимосвязи самостоятельно.
 
-Reinforcement Learning:
+Примеры подобного типа обучения:
+- кластеризация (группирование данных по похожим признакам)
+- dimensionality reduction (reducing the number of features in the data)
+- and anomaly detection (identifying outliers in the data).
+
+## Reinforcement (с подкреплением):
 
 Reinforcement learning is a type of machine learning algorithm that trains models using a reward system. The model receives rewards or penalties based on its actions, and the objective is to maximize the total reward over time. Reinforcement learning is often used in decision-making and control systems, where the model needs to learn how to interact with an environment and make decisions that lead to optimal outcomes.
 
-Examples of reinforcement learning include playing video games (where the model receives rewards for winning and penalties for losing), controlling robots (where the model learns how to perform tasks), and trading stocks (where the model learns how to make investment decisions based on market trends).
+Примеры подобного типа обучения:
+- playing video games (where the model receives rewards for winning and penalties for losing)
+- controlling robots (where the model learns how to perform tasks)
+- and trading stocks (where the model learns how to make investment decisions based on market trends).
 
 ***
 
