--- a/data/blog/how-i-ai-studied.mdx
+++ b/data/blog/how-i-ai-studied.mdx
@@ -125,9 +125,9 @@ Neural networks are powerful models that can handle complex and non-linear relat
 
 > What are "Hello world" starting projects in machine learning?
 
-"Hello world" starting projects in machine learning are simple and introductory projects that are designed to help beginners get started with machine learning. They are typically small, straightforward, and focused on a specific task, such as:
+Стартовые проекты "Hello world" в мире машинного обучения созданы, чтобы помочь начинающим начать обучение. В основном эти проекты маленькие, прямолинейные и сфокусированны на конкретных задачах, таких как:
 
-1. Iris flower classification: This project involves using machine learning algorithms to classify iris flowers based on their sepal length, sepal width, petal length, and petal width. This is a classic example of a supervised classification problem.
+1. Классификация ирисов: этот проект включает в себя использование алгоритмов для классификации ирисов основываясь на длине их листьев, их ширине. Это классический пример supervised классификации.
 2. Handwritten digit recognition: This project involves using machine learning algorithms to recognize handwritten digits from the MNIST dataset. This is a supervised classification problem.
 3. Linear regression: This project involves using linear regression to predict a continuous value, such as the price of a house, based on one or more input features.
 4. Clustering: This project involves using clustering algorithms to group similar data points together based on their features. This is an unsupervised learning problem.
